<resources>
    <string name="app_name">MyGithubUsers Sub 2</string>
    <string name="search">Search</string>
    <string name="search_hint">Carikan Usersnya</string>

    <!--
    %1$s = String
    %2$d = Double

-->
    <string name="hello_world">Hallo Dunia %1$s !, Kamu memiliki %2$d Fragment tersisa</string>
    <string name="more">Lihat selengkapnya >>></string>
    <string name="language_settings">Bahasa</string>
    <string name="btn_list_seemore">Lihat</string>
    <string name="btn_list_share">Bagikan</string>

    <string name="tab_text_1">Mengikuti</string>
    <string name="tab_text_2">Pengikut</string>
    <string name="tab_text_3" translatable="false">Repositories</string>
    <string name="detail_txtFollowing">Mengikuti</string>
    <string name="detail_txtRepository" translatable="false">Repositories</string>
    <string name="github_avatar" translatable="false">Github Avatar</string>
    <string name="detail_txtUsername" translatable="false">Username</string>
    <string name="detail_txtExampleEmail" translatable="false">example@email.com</string>
    <string name="detail_txtExampleLocation" translatable="false">Yogyakarta</string>
    <string name="detail_followersUsername" translatable="false">Username</string>
    <string name="detail_company">Perusahaan</string>
    <string name="detail_txtFollowingUsername" translatable="false">Username</string>
    <string name="username" translatable="false">Agus Kurniadin Khaer</string>
    <string name="loading">Memuat Data</string>
    <string name="detail_txtFollowers">Pengikut</string>
    <string name="loading_percent" translatable="false">25%</string>

    <string name="not_found">Tidak diketahui</string>

<!--    WORDS -->
    <string name="word_email" translatable="false">Email</string>
    <string name="word_company">Perusahaan</string>
    <string name="word_location">Lokasi</string>
    <string name="detail_txtFullname" translatable="false">fullname</string>

    <!--    <plurals name="numberOfSongsAvailable">-->
    <!--        <item quantity="one">%d song found.</item>-->
    <!--        <item quantity="other">%d songs found.</item>-->
    <!--    </plurals>-->

</resources>