<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail_page.DetailUser">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="visible"/>

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:visibility="gone"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher_background"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/github_avatar" />
            <TextView
                android:id="@+id/fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/detail_txtFullname"
                android:textColor="#232323"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/detail_txtUsername"
                android:textColor="#232323"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/detail_txtExampleEmail"
                android:textColor="#232323"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/detail_txtExampleLocation"
                android:textColor="#232323"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:translationX="-2dp"
                android:drawablePadding="3dp"
                app:drawableStartCompat="@drawable/ic_location"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/detail_company"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textColor="#232323"
                android:textSize="14sp"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:id="@+id/company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="PT Lauwba Techno Indonesia"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="#232323"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_company" />


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:tabTextColor="@android:color/white"
                app:tabIndicatorColor="@color/white"
                app:tabIndicatorHeight="4dp"/>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="458dp" />

        </LinearLayout>
    </RelativeLayout>


</ScrollView>
